# ai-newsroom-humanizer

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
data/phase2/: eval_results.jsonl  loop_results.jsonl  proxy_config.json  proxy_model.pt  proxy_training_pairs.jsonl
data/phase2-training-pool/: eval.jsonl  proxy.jsonl  train.jsonl
data/phase2/smoke/: stealthrl_editlens.jsonl
data/phase3-smoke/: open_source_smoke2.jsonl  open_source_variants.jsonl
data/phase3a/: bge_n12.jsonl  results_n12.jsonl  sample_n12.jsonl
data/phase3b/: nightly_summary.json  nightly_target_trace.json  pangram_pre_n13.jsonl
data/profiles/: casdorff.json
data/test-corpora/casdorff-2026-06-15/: 01_casdorff_loop_results.jsonl  02_faithfulness.jsonl  03_multimodel_results.jsonl  05_hybrid_edit_results.jsonl  07_stilometric_results.jsonl
docs/: phase3b-go-no-go-2026-06-19.md
docs/adr/: 001-state-of-research.md  002-phase1-prompt-engineering-results.md  003-roadmap-authormist-phase2.md  004-stealthrl-replication.md  005-hybrid-vergleich-eval.md  006-phase2-smoke-stealthrl-zero-shot-failed.md  007-phase2-fail-mode-diagnosis.md  008-phase3a-mistral-replikation.md  009-phase3b-best-of-50-production.md  010-pangram-fpr-pre2022-baseline.md
scripts/: pangram_pre_n13.py  rollback-to-sonnet.sh  setup_phase2.sh
scripts/fpr_test/: eval_pangram_fpr.py  export_fpr_excel.py  pull_pre2022.py
src/humanizer/: _openrouter.py  _pangram.py  cli.py  core.py  core_bestofn.py  env.py  export.py  faithfulness.py  phase3b_export.py  profile_extractor.py
src/humanizer/data/: load_training_pool.py
src/humanizer/strategies/: 02_iterative_loop.py  03_multimodel.py  05_hybrid_edit.py  A_stilometric_prompt.py
src/humanizer/training/: fail_mode_analysis.py  grpo_proxy.py  nightly_run_phase3b.py  p1_collect_proxy_data.py  p2_train_proxy.py  p3_detector_aware_loop.py  p4_final_eval.py  p5_master_report.py  score_paraphrases.py  smoke_open_source.py  smoke_open_source_2.py  smoke_phase3a_n12.py  stealthrl_smoke.py
tests/: conftest.py  test_cli_help.py  test_env.py  test_pangram_mock.py  test_split_paragraphs.py
tests/staging_corpus/: README.md  expected_results.json  mini_pangram_cache.json
