[project]
name = "ai-newsroom-humanizer"
version = "0.1.0"
description = "Test-Korpus + Humanizer-Werkstatt — empirische Robustheits-Audits von AI-Detektoren (Pangram, GPTZero)"
authors = [{ name = "Almagenic / HMG AI-Newsroom" }]
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    "httpx>=0.27",
    "openpyxl>=3.1",
    "python-docx>=1.1",
]

[project.optional-dependencies]
training = [
    # Phase 2: AuthorMist mit MLX-GRPO
    "mlx>=0.20",
    "mlx-lm>=0.18",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/humanizer"]
